# IWantIt

./: .gitignore  LICENSE  README.md  pyproject.toml  sampleProwlarrMusicResponse.json
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: RedAPIDocs.md  album_cover_ai.md  book_decision.md  integrateShelfmarkMaybe.md  redacted_comment_sourcing_plan.md
docs/diagrams/: book-workflow.mmd  decision-and-dispatch.mmd  flow-overview.mmd  movie-tv-workflow.mmd  music-workflow.mmd  pre-steps.mmd
iwantit/: __init__.py  __main__.py  canonical.py  cli.py  config.py  paths.py  pipeline.py  plugins.py  registry.py  report.py  schema.py  step_metadata.py  util.py
iwantit/steps/: builtin.py  music_tracker_identify.py
scripts/: functional_test.py
tests/: test_canonical.py  test_provider_fixtures.py
tests/fixtures/: brave.json  kagi.json
